--- a/static/css/helper-classes.css
+++ b/static/css/helper-classes.css
@@ -44,11 +44,11 @@
 
 .h-100,
 .img-cover {
-  height: 100%;
+  height: 100% !important;
 }
 
 .vh-100 {
-  height: 100vh;
+  height: 100vh !important;
 }
 
 .img-cover {
