--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4141,7 +4141,32 @@ ul {
 }
 
 a {
-  text-decoration: none !important
+  text-decoration: none !important;
+}
+
+.menu--item {
+  font-size: 16px;
+  font-family: var(--semiBold);
+  color: #6a7e9c;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.desktop-menu--items {
+  border-bottom: 1px solid rgba(var(--main-color), 0.12);
+  padding: 35px 0;
+}
+
+.arrow-down {
+  width: 12px;
+  height: 12px;
+  border-bottom: 2px solid #000;
+  border-right: 2px solid #000;
+  transform: rotate(45deg);
+}
+
+.menu-items-wrap .search-block-aside {
+  margin-bottom: 0 !important;
 }
 
 /***************** MEDIA ***************/
@@ -4451,7 +4476,17 @@ a {
   }
 }
 
+@media (min-width: 992px) {
+  .mobile-menu-container {
+    display: none;
+  }
+}
+
 @media (max-width: 992px) {
+  .desktop-menu-container {
+    display: none;
+  }
+
   .vacancies-show-left {
     margin-bottom: 60px;
     position: relative;
